# summary-extension

./: Notice  PRIVACY_POLICY.md  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.js  wxt.config.ts
.github/: dependabot.yml
.github/workflows/: docker.yml  extension.yml  python-ci.yml  sub-service.yml
bak/: README.md  package-lock.json
bak/html/: settings.html  sidepanel.html
bak/js/: background.js  sidepanel.js
components/: coloered-button.ts
css/: style.css
entrypoints/: background.ts  content.ts
entrypoints/options/: index.html  main-form.ts  main.ts
entrypoints/options/bak/: index.html  main.ts
entrypoints/sidepanel/: index.html  main.ts  response-area.ts  tab-helper.ts  warning-message.ts
html/: settings.html  sidepanel.html
js/: ai_service.js  background.js  content.js  settings.js  sidepanel.js
js/lib/: utils.js
lib/: content-extract.ts  llm.ts  settings.ts  sub.ts
public/: manifest.json
sub-service/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_main.py  test_ytdlp.py  ytdlp.py
utils/: content-extract.ts  debug.ts  llm.ts  settings.ts
