[project]
name = "sub-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools",
    "fastapi[standard]",
    "yt-dlp",
    "pytest",
]

[tool.uv.workspace]
members = [
    "test",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
