[project]
name = "sub-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools",
    "fastapi[standard]",
    "yt-dlp[curl-cffi,default]",
    "pytest",
    "curl-cffi>=0.13.0",
]

[tool.uv.workspace]
members = [
    "test",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
